--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#quote-box {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 50%;
+	margin: 0 auto;
+	background-color: red;
+	margin-top: 45vh;
+	color: aliceblue;
+	border-radius: 1rem;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#new-quote {
+	display: flex;
+	align-items: center;
+	margin: 1rem;
+	color: red;
+	padding: 0.5rem 1rem;
+	border: none;
+	border-radius: 0.2rem;
+	cursor: pointer;
 }
+.tweeter {
+	display: flex;
+	align-items: center;
+	margin: 1rem;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	padding: 0.5rem 1rem;
+	border: none;
+	border-radius: 0.2rem;
+	cursor: pointer;
+	font-size: 2rem;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#new-quote:hover,
+.tweeter:hover {
+	background-color: rgba(255, 255, 255, 0.3); /* light background on hover */
+	transition: background-color 0.3s ease; /* smooth transition */
 }
